Added new picture that blends to the background and new titles that go under the picture

--- a/style.css
+++ b/style.css
@@ -3,18 +3,31 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 body{
-    background: #080808;
+    background: #f7e9e0;
     color: #fff;
+    overflow-y:scroll;
 }
 #header{
     width: 100%;
-    height: 100vh;
-    background-image: url(resources/IMG_5153.jpeg);
+    height: 215vh;
+    background-image: url(resources/IMG_5153.png);
     background-size: cover;
     background-position: center;
+
 }
+
+.title{
+    position: absolute; top: 950px;
+    color: brown;
+}
+.about-me{
+    position: absolute; right: 100px; top: 940px;
+    color: brown;
+}
+
 .container{
     padding: 10px 10%;
 }
